crates/uitest/fixtures/mir_check/noesc_storage_escape.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/noesc_storage_escape.fe
---
error[11-0001]: cannot store `Esc` in `Storage`
   ┌─ noesc_storage_escape.fe:11:5
   │
11 │     slot = e
   │     ^^^^^^^^ this value cannot be written to `Storage`
   │
   = note: this value contains a borrow handle (`mut`/`ref`)
